removed some language specification support

--- a/doc/I18N.md
+++ b/doc/I18N.md
@@ -4,8 +4,6 @@
 - 🇮🇹 Italiano (it) - Default
 - 🇬🇧 Inglese (en)
 - 🇩🇪 Tedesco (de)
-- 🇫🇷 Francese (fr) - [Da implementare]
-- 🇪🇸 Spagnolo (es) - [Da implementare]
 
 ## Come Funziona
 
@@ -98,9 +96,7 @@ Le traduzioni sono organizzate in `/src/locales/`:
 src/locales/
 ├── it.json (Italiano)
 ├── en.json (Inglese)
-├── de.json (Tedesco)
-├── fr.json (Francese) - Da completare
-└── es.json (Spagnolo) - Da completare
+└── de.json (Tedesco)
 ```
 
 ### Categorie di Messaggi
@@ -183,9 +179,6 @@ curl -H "X-Language: de" http://localhost:8080/api/v1/orti/invalid-id
 
 ## Roadmap
 
-- [ ] Completare traduzioni francesi (fr.json)
-- [ ] Completare traduzioni spagnole (es.json)
 - [ ] Aggiungere traduzioni per tutti i controller
 - [ ] Implementare traduzioni per messaggi di validazione Mongoose
-- [ ] Aggiungere supporto per plurali
 - [ ] Aggiungere supporto per parametri dinamici nelle traduzioni
