--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,20 +6,43 @@
     "retrieving_utente": "Error retrieving user",
     "retrieving_lotti": "Error retrieving plots",
     "retrieving_lotto": "Error retrieving plot",
+    "retrieving_sensors": "Error retrieving sensors",
+    "retrieving_sensor": "Error retrieving sensor",
+    "retrieving_meteo": "Error retrieving weather data",
+    "retrieving_comuni": "Error retrieving municipalities",
+    "retrieving_comune": "Error retrieving municipality",
+    "retrieving_bandi": "Error retrieving announcements",
+    "retrieving_bando": "Error retrieving announcement",
+    "retieving_avvisi": "Error retrieving notices",
+    "retrieving_avviso": "Error retrieving notice",
+    "retrieving_associazioni": "Error retrieving associations",
+    "retrieving_associazione": "Error retrieving association",
 
     "creating_orto": "Error creating garden",
     "creating_utente": "Error creating user",
     "creating_lotto": "Error creating plot",
+    "creating_comune": "Error creating municipality",
+    "creating_bando": "Error creating announcement",
+    "creating_avviso": "Error creating notice",
+    "creating_associazione": "Error creating association",
     
     "updating_orto": "Error updating garden",
     "updating_utente": "Error updating user",
     "updating_lotto": "Error updating plot",
     "updating_password": "Error updating password",
+    "updating_comune": "Error updating municipality",
+    "updating_bando": "Error updating announcement",
+    "updating_avviso": "Error updating notice",
+    "updating_associazione": "Error updating association",
 
     "deleting_orto": "Error deleting garden",
     "deleting_utente": "Error deleting user",
     "deleting_lotto": "Error deleting plot",
-    
+    "deleting_comune": "Error deleting municipality",
+    "deleting_bando": "Error deleting announcement",
+    "deleting_avviso": "Error deleting notice",
+    "deleting_associazione": "Error deleting association",
+
     "database_error": "Database error",
 
     "validation_error": "Validation error",
@@ -30,15 +53,25 @@
     "orto_deleted": "Garden deleted successfully",
     "utente_deleted": "User deleted successfully",
     "lotto_deleted": "Plot deleted successfully",
+    "comune_deleted": "Municipality deleted successfully",
+    "bando_deleted": "Announcement deleted successfully",
+    "avviso_deleted": "Notice deleted successfully",
+    "associazione_deleted": "Association deleted successfully",
 
     "orto_created": "Garden created successfully",
     "utente_created": "User created successfully",
     "lotto_created": "Plot created successfully",
+    "comune_created": "Municipality created successfully",
+    "avviso_created": "Notice created successfully",
+    "associazione_created": "Association created successfully",
 
     "orto_updated": "Garden updated successfully",
     "utente_updated": "User updated successfully",
     "lotto_updated": "Plot updated successfully",
-    "password_updated": "Password updated successfully"
+    "password_updated": "Password updated successfully",
+    "comune_updated": "Municipality updated successfully",
+    "avviso_updated": "Notice updated successfully",
+    "associazione_updated": "Association updated successfully"
   },
   "notFound": {
     "orto": "Garden not found",
@@ -47,7 +80,9 @@
     "associazione": "Association not found",
     "comune": "Municipality not found",
     "avviso": "Notice not found",
-    "bando": "Announcement not found"
+    "bando": "Announcement not found",
+    "sensor": "Sensor not found",
+    "meteo": "Weather reading not found"
   },
   "validation": {
     "email_exists": "User already exists with this email",
@@ -57,7 +92,8 @@
     "required_field": "Required field",
     "password_too_short": "Password too short (minimum 8 characters)",
     "password_updated": "Password updated successfully",
-    "old_password_incorrect": "Old password incorrect"
+    "old_password_incorrect": "Old password incorrect",
+    "invalid_duplicate_data": "Invalid or duplicate data"
   },
   "auth": {
     "login_success": "Login successful",
