minor fixes in avvisi and language

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -13,7 +13,7 @@
     "retrieving_comune": "Fehler beim Abrufen der Gemeinde",
     "retrieving_bandi": "Fehler beim Abrufen der Ankündigungen",
     "retrieving_bando": "Fehler beim Abrufen der Ankündigung",
-    "retieving_avvisi": "Fehler beim Abrufen der Hinweise",
+    "retrieving_avvisi": "Fehler beim Abrufen der Hinweise",
     "retrieving_avviso": "Fehler beim Abrufen des Hinweises",
     "retrieving_associazioni": "Fehler beim Abrufen der Verbände",
     "retrieving_associazione": "Fehler beim Abrufen des Verbandes",
