--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
     "retrieving_comune": "Error retrieving municipality",
     "retrieving_bandi": "Error retrieving announcements",
     "retrieving_bando": "Error retrieving announcement",
-    "retieving_avvisi": "Error retrieving notices",
+    "retrieving_avvisi": "Error retrieving notices",
     "retrieving_avviso": "Error retrieving notice",
     "retrieving_associazioni": "Error retrieving associations",
     "retrieving_associazione": "Error retrieving association",
