--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -13,7 +13,7 @@
     "retrieving_comune": "Errore nel recupero del comune",
     "retrieving_bandi": "Errore nel recupero dei bandi",
     "retrieving_bando": "Errore nel recupero del bando",
-    "retieving_avvisi": "Errore nel recupero degli avvisi",
+    "retrieving_avvisi": "Errore nel recupero degli avvisi",
     "retrieving_avviso": "Errore nel recupero dell'avviso",
     "retrieving_associazioni": "Errore nel recupero delle associazioni",
     "retrieving_associazione": "Errore nel recupero dell'associaione",
