--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -16,11 +16,12 @@
     "retrieving_avvisi": "Errore nel recupero degli avvisi",
     "retrieving_avviso": "Errore nel recupero dell'avviso",
     "retrieving_associazioni": "Errore nel recupero delle associazioni",
-    "retrieving_associazione": "Errore nel recupero dell'associaione",
+    "retrieving_associazione": "Errore nel recupero dell'associazione",
     "retrieving_affidamenti_lotto": "Errore nel recupero degli affidamenti dei lotti",
     "retrieving_affidamento_lotto": "Errore nel recupero dell'affidamento del lotto",
     "retrieving_affidamenti_orto": "Errore nel recupero degli affidamenti degli orti",
     "retrieving_affidamento_orto": "Errore nel recupero dell'affidamento dell'orto",
+    "retrieving_active_affidamenti_orto": "Errore nel recupero degli affidamenti attivi degli orti",
     "creating_orto": "Errore nella creazione dell'orto",
     "creating_utente": "Errore nella creazione dell'utente",
     "creating_lotto": "Errore nella creazione del lotto",
