--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -22,6 +22,8 @@
     "retrieving_affidamenti_orto": "Fehler beim Abrufen der Garten-Zuweisungen",
     "retrieving_affidamento_orto": "Fehler beim Abrufen der Garten-Zuweisung",
     "retrieving_active_affidamenti_orto": "Fehler beim Abrufen der aktiven Garten-Zuweisungen",
+    "searching_ortos": "Fehler bei der Suche nach Gärten",
+    "invalid_coordinates": "Ungültige Koordinaten",
     "creating_orto": "Fehler beim Erstellen des Gartens",
     "creating_utente": "Fehler beim Erstellen des Benutzers",
     "creating_lotto": "Fehler beim Erstellen der Parzelle",
