--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,8 @@
     "retrieving_affidamenti_orto": "Error retrieving garden assignments",
     "retrieving_affidamento_orto": "Error retrieving garden assignment",
     "retrieving_active_affidamenti_orto": "Error retrieving active garden assignments",
+    "searching_ortos": "Error searching gardens",
+    "invalid_coordinates": "Invalid coordinates",
     "creating_orto": "Error creating garden",
     "creating_utente": "Error creating user",
     "creating_lotto": "Error creating plot",
