--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -52,6 +52,9 @@
     "deleting_associazione": "Fehler beim Löschen des Verbandes",
     "deleting_affidamento_lotto": "Fehler beim Löschen der Parzellen-Zuweisung",
     "deleting_affidamento_orto": "Fehler beim Löschen der Garten-Zuweisung",
+    "adding_member": "Fehler beim Hinzufügen des Mitglieds",
+    "removing_member": "Fehler beim Entfernen des Mitglieds",
+    "retrieving_members": "Fehler beim Abrufen der Mitglieder",
     "adding_coltura": "Fehler beim Hinzufügen der Kulturpflanze",
     "removing_coltura": "Fehler beim Entfernen der Kulturpflanze",
     "database_error": "Datenbankfehler",
@@ -88,6 +91,8 @@
     "associazione_updated": "Verband erfolgreich aktualisiert",
     "affidamento_lotto_updated": "Parzellen-Zuweisung erfolgreich aktualisiert",
     "affidamento_orto_updated": "Garten-Zuweisung erfolgreich aktualisiert",
+    "member_added": "Mitglied erfolgreich hinzugefügt",
+    "member_removed": "Mitglied erfolgreich entfernt",
     "coltura_added": "Kulturpflanze erfolgreich hinzugefügt",
     "coltura_removed": "Kulturpflanze erfolgreich entfernt"
   },
@@ -115,6 +120,8 @@
     "password_updated": "Passwort erfolgreich aktualisiert",
     "old_password_incorrect": "Altes Passwort falsch",
     "invalid_duplicate_data": "Ungültige oder doppelte Daten",
+    "member_already_exists": "Mitglied ist bereits im Verband vorhanden",
+    "member_not_found": "Mitglied nicht in diesem Verband gefunden",
     "coltura_required": "Kulturpflanze ist erforderlich"
   },
   "auth": {
