--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -52,6 +52,9 @@
     "deleting_associazione": "Errore nell'eliminazione dell'associazione",
     "deleting_affidamento_lotto": "Errore nell'eliminazione dell'affidamento del lotto",
     "deleting_affidamento_orto": "Errore nell'eliminazione dell'affidamento dell'orto",
+    "adding_member": "Errore nell'aggiunta del membro",
+    "removing_member": "Errore nella rimozione del membro",
+    "retrieving_members": "Errore nel recupero dei membri",
     "adding_coltura": "Errore nell'aggiunta della coltura",
     "removing_coltura": "Errore nella rimozione della coltura",
     "database_error": "Errore del database",
@@ -88,6 +91,8 @@
     "associazione_updated": "Associazione aggiornata con successo",
     "affidamento_lotto_updated": "Affidamento del lotto aggiornato con successo",
     "affidamento_orto_updated": "Affidamento dell'orto aggiornato con successo",
+    "member_added": "Membro aggiunto con successo",
+    "member_removed": "Membro rimosso con successo",
     "coltura_added": "Coltura aggiunta con successo",
     "coltura_removed": "Coltura rimossa con successo"
   },
@@ -115,6 +120,8 @@
     "password_updated": "Password aggiornata con successo",
     "old_password_incorrect": "Vecchia password non corretta",
     "invalid_duplicate_data": "Dati non validi o duplicati",
+    "member_already_exists": "Membro già presente nell'associazione",
+    "member_not_found": "Membro non trovato in questa associazione",
     "coltura_required": "La coltura è obbligatoria"
   },
   "auth": {
