added consigli end point in API

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -9,6 +9,10 @@
     "retrieving_sensors": "Fehler beim Abrufen der Sensoren",
     "retrieving_sensor": "Fehler beim Abrufen des Sensors",
     "retrieving_meteo": "Fehler beim Abrufen der Wetterdaten",
+    "missing_colture": "Kulturenliste ist erforderlich",
+    "ai_api_key_missing": "AI API-Schlüssel nicht konfiguriert",
+    "generating_consigli": "Fehler beim Generieren der Gartentipps",
+    "ai_rate_limit": "Zu viele Anfragen. Bitte in einigen Sekunden erneut versuchen",
     "retrieving_comuni": "Fehler beim Abrufen der Gemeinden",
     "retrieving_comune": "Fehler beim Abrufen der Gemeinde",
     "retrieving_bandi": "Fehler beim Abrufen der Ankündigungen",
