--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,10 @@
     "retrieving_sensors": "Error retrieving sensors",
     "retrieving_sensor": "Error retrieving sensor",
     "retrieving_meteo": "Error retrieving weather data",
+    "missing_colture": "Crops list is required",
+    "ai_api_key_missing": "AI API key not configured",
+    "generating_consigli": "Error generating gardening tips",
+    "ai_rate_limit": "Too many requests. Please retry in a few seconds",
     "retrieving_comuni": "Error retrieving municipalities",
     "retrieving_comune": "Error retrieving municipality",
     "retrieving_bandi": "Error retrieving announcements",
