--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -9,6 +9,10 @@
     "retrieving_sensors": "Errore nel recupero dei sensori",
     "retrieving_sensor": "Errore nel recupero del sensore",
     "retrieving_meteo": "Errore nel recupero di dati meteo",
+    "missing_colture": "Elenco colture obbligatorio",
+    "ai_api_key_missing": "Chiave API AI non configurata",
+    "generating_consigli": "Errore nella generazione dei consigli",
+    "ai_rate_limit": "Troppe richieste. Riprova tra qualche secondo",
     "retrieving_comuni": "Errore nel recupero dei comuni",
     "retrieving_comune": "Errore nel recupero del comune",
     "retrieving_bandi": "Errore nel recupero dei bandi",
